# UWPOpenIGTLink

./: .gitignore  CMakeLists.txt  UWPOpenIGTLink.sln
OpenIGTLink/: CMakeLists.txt
UWPOpenIGTLink/: CMakeLists.txt
UWPOpenIGTLink/Content/: IGTClient.cxx  TrackedFrameMessage.cxx  TrackedFrameMessage.h
UWPOpenIGTLinkUI/: CMakeLists.txt  IGTLConnectorPage.xaml.cpp  IGTLConnectorPage.xaml.h
